* Fixed issue when pulling a product that is a directory using the S3 remote
  backend.

6.3 2023-12-13
~~~~~~~~~~~~~~

* Added support for extension-specific configuration sections in archive
  configuration files.

* Introduced `timeout` and `retries` options for the
  `extension:muninn.remote` section in an archive configuration.
  The number of retries now defaults back to 0.

* Added option to muninn-info to show all archives if no archive parameter
  is provided.

* Added muninn.list_archives() function.

* Improved support for using muninn on Windows (e.g. '\' in paths are now
  translated to '/' when stored as muninn metadata)

* Fixed issue where S3 bucket prefix object was created with one '/' too many.

6.2 2023-09-20
~~~~~~~~~~~~~~

* Added S3 remote backend to allow performing a muninn pull from an object
  store.

* A muninn pull will now set core.hash (if it did not yet have a value) similar
  to muninn ingest.

* Added support for s3://bucket entries in the credentials authorization file.
  These entries can be used by the S3 storage backend and S3 remote backend.

* Added from_geojson() and as_geojson() methods to muninn.geometry data types.

* Fixed issue where is_defined(<namespace>) did not work for the sqlite
  backend when using a table prefix.

6.1.1 2023-08-02
~~~~~~~~~~~~~~~~

* Fixed several issues with the return value of Archive.retrieve().

6.1 2023-07-24
~~~~~~~~~~~~~~

* The S3 bucket prefix is now created as a 'directory object' so its existence
  can be explicitly checked.

* muninn-pull for http/https will now retry once in case of a timeout error.

* muninn-prepare --dry-run now adds a ';' at the end of each line.

* Added --verify-hash option to muninn-retrieve.

* Command line tools no longer show a progress bar if there is no tty.

* Fixed issue where failing to set/unset a tag did not result in an error.

* Fixed issue with relocating products in an S3 archive when the product
  contained an empty subdirectory.
