@@ -10,7 +10,9 @@ __copyright__ = "Copyright (C) 2014-2023 S[&]T, The Netherlands."
 __all__ = ["Error", "InternalError", "Struct", "Archive", "open", "config_path"]
 
 import os as _os
+import sys as _sys
 
+from muninn._compat import urlparse as _urlparse
 from muninn.archive import Archive
 from muninn.exceptions import *
 from muninn.struct import Struct
@@ -25,9 +27,12 @@ def open(id=None, **kwargs):
     """Open an archive for the given archive id, by searching for the
     corresponding configuration file in the locations found in the
     `MUNINN_CONFIG_PATH` environment variable.
+    Alternatively, the id can be a path/url that points directly to a
+    muninn archive configuration file (Python 3 only). This path/url
+    should still end with a `.cfg` extension.
 
     Arguments:
-    id  --  Archive id (name of configuration file)
+    id  --  Archive id (name of configuration file) or path/url to a configuration file
 
     Returns:
     An instance of `muninn.archive.Archive`
@@ -36,6 +41,10 @@ def open(id=None, **kwargs):
         configuration = {}
     else:
         configuration = _read_archive_config_file(_locate_archive_config_file(id))
+        if id.endswith(".cfg"):
+            if "/" in id:
+                id = id.rsplit("/", 1)[1]
+            id = _os.path.splitext(id)[0]
 
     for name, value in kwargs.items():
         section = configuration.setdefault(name, {})
@@ -43,10 +52,10 @@ def open(id=None, **kwargs):
 
     return Archive.create(configuration, id)
 
+
 def list_archives():
     """Search locations found in the 'MUNINN_CONFIG_PATH' environment variable
     and return names of all found archives."""
-
     result = []
     for path in filter(None, config_path().split(":")):
         if _os.path.isfile(path):
@@ -64,12 +73,24 @@ def _read_archive_config_file(path):
         from configparser import ConfigParser
 
     parser = ConfigParser()
-    if not parser.read(path):
-        raise Error("unable to read config file: \"%s\"" % path)
+
+    if _urlparse(path).scheme != '':
+        if _sys.version_info[0] < 3:
+            raise NotImplementedError("retrieving archive configuration files via an url requires python 3")
+        import urllib.request
+        with urllib.request.urlopen(path, timeout=60) as response:
+            parser.read_string(response.read().decode("utf-8"))
+    else:
+        if not parser.read(path):
+            raise Error("unable to read config file: \"%s\"" % path)
+
     return dict([(name, dict(parser.items(name))) for name in parser.sections()])
 
 
 def _locate_archive_config_file(archive_id):
+    if archive_id.endswith(".cfg"):
+        # the archive id is already a path/url to the config file
+        return archive_id
     config_file_name = "%s.cfg" % archive_id
     if _os.path.basename(config_file_name) != config_file_name:
         raise Error("invalid archive identifier: \"%s\"" % archive_id)
